shinkai-app/src/components/ui/Input.css
.native-input {
  --placeholder-color: theme("colors.slate.800");
  --border-width: 0;
  --border-color: theme("colors.slate.300/20");
  --background: theme("colors.slate.100");
  --highlight-color: theme("colors.slate.400");
  --highlight-color-focused: theme("colors.gray.300");
  --color: theme("colors.slate.800");
  @media (prefers-color-scheme: dark) {
    --background: theme("colors.slate.800");
    --color: theme("colors.slate.200");
    --border-color: theme("colors.slate.800/20");
    --placeholder-color: theme("colors.slate.300");
    --highlight-color: theme("colors.gray.300");
    --highlight-color-focused: theme("colors.white");
  }
}

